<resources>

    <string name="app_name">BoyntonAllen_CE01</string>

    // Number button names
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>

    // Operator button names
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="equals">=</string>

    // String names
    <string name="e">E</string>
    <string name="error">Error</string>
    <string name="zeroDivide">Cannot Divide By Zero!</string>


</resources>
