<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.fullsail.aboynton.boyntonallen_ce01.MainActivity"
    android:background="@color/colorPrimary">

    <TextView android:id="@+id/textView"
        android:layout_width="0dp"
        android:textSize="40dp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_1"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <Button android:id="@+id/button7"
            android:text="@string/_7"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp"
            android:layout_width="90dp" />

        <Button android:id="@+id/button8"
            android:text="@string/_8"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button9"
            android:text="@string/_9"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button_division"
            android:text="@string/divide"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_2"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button android:id="@+id/button4"
            android:text="@string/_4"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button5"
            android:text="@string/_5"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button6"
            android:text="@string/_6"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button_multiplication"
            android:text="@string/multiply"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_3"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_4"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button android:id="@+id/button1"
            android:text="@string/_1"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button2"
            android:text="@string/_2"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button3"
            android:text="@string/_3"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button_subtraction"
            android:text="@string/minus"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <Button android:id="@+id/button_clear"
            android:text="@string/clear"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button0"
            android:text="@string/_0"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button_equals"
            android:text="@string/equals"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

        <Button android:id="@+id/button_addition"
            android:text="@string/plus"
            android:layout_width="90dp"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="110dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
